# psxrecomp

./: .gitignore  .mcp.json  BACKDROP_PRELOAD.md  CLAUDE.md  CURRENT_STATE.md  HANDOFF_PHASE3.md  ISSUES.md  NATIVE_WIDE_PLAN.md  PLAN.md  README.md  RELEASE_NOTES.md  SLJIT_PERSIST_CACHE.md  TCP_COMMANDS.md  THIRD_PARTY_ATTRIBUTION.md  UNIFICATION_PLAN.md  WIDESCREEN.md  dummy.0.mcr  dummy.1.mcr
docs/: CASE_A_AOT_GAP.md  FEATURES.md  audit_inventory.md  beetle_wtrace_hook.patch  config_schema.md  disc-speed.md  overlay-discovery.md  overlay-plan.md  overlay-recompilation-design.md  overlay-status.md
games/bomberman/: game.toml  seeds.txt
games/parappa-the-rapper/: game.toml  seeds.txt
games/silhouette-mirage/: game.toml  seeds.txt
recompiler/: CMakeLists.txt
recompiler/include/: code_generator.h  function_analysis.h
recompiler/seeds/: dispatch_miss_seeds.json  phase2_ghidra_seeds.json
recompiler/src/: code_generator.cpp  config_loader.cpp  config_loader.h  control_flow.cpp  full_function_emitter.cpp  full_function_emitter.h  function_analysis.cpp  function_discovery.cpp  function_discovery.h  main_bios.cpp  main_psx.cpp  strict_translator.cpp
runtime/: CMakeLists.txt  runtime.cmake
runtime/include/: autocompile.h  cdrom.h  code_provider.h  cpu_state.h  crc32.h  debug_server.h  dirty_ram_interp.h  disc_identity.h  dma.h  event_ring.h  fntrace.h  frame_pacing.h  gpu.h  gpu_gl_renderer.h  gpu_render.h  gpu_sw_renderer.h  gte.h  interrupts.h  mdec.h  memcard.h  overlay_api.h  overlay_capture.h  overlay_loader.h  overlay_log.h  overlay_sljit.h  sio.h  spu.h  timers.h
runtime/launcher/: launcher.cpp  launcher.h  stb_image_impl.cpp
runtime/launcher/assets/: launcher.rml
runtime/src/: autocompile.c  beetle_debug_server.c  beetle_libretro.cpp  beetle_main.cpp  beetle_psx_bridge.cpp  cdrom.c  code_provider.c  crash_trace.c  crc32.c  debug_server.c  dirty_ram_interp.c  disc_identity.cpp  dma.c  event_ring.c  fntrace.c  frame_pacing.c  freeze_heartbeat.c  gpu.c  gpu_gl_renderer.c  gpu_render.c  gpu_sw_renderer.c  gte.cpp  interrupts.c  iso_reader.cpp  main.cpp  mdec.c  memcard.c  memory.c  overlay_capture.c  overlay_loader.c  overlay_log.c  overlay_sljit.c  psx_cycles.c  psx_interpreter.c  psx_oracle_cmds.c  sio.c  spu.c  timers.c  traps.c
runtime/tests/: sljit_emit_test.c  sljit_offline_diff.c  sljit_sp_probe.c  test_frame_pacing.c
tools/: _arm_button_table.py  _bmp_stats.py  _capture_button_press.py  _capture_repro.py  _card_writes.py  _chain_diag.py  _chain_diag2.py  _check_a180.py  _check_bfc1a1bc.py  _check_dispatcher_path.py  _check_fn19a58.py  _check_fn24f00.py  _check_gate.py  _check_press_path.py  _check_wtrace.py  _codegen_audit.py  _decode_strs.py  _decode_substate_jt.py  _dirty_block_log.py  _dump_all_state_entries.py  _dump_cursor_writes.py  _dump_missing_funcs.py  _dump_modal_stubs.py  _dump_ram_caller.py  _dump_state6.py  _dump_state6_entry.py  _dump_state7.py  _examine_handler.py  _extract_trampoline_seeds.py  _find_1005a910.py  _find_428f0.py  _find_dispatcher_caller.py  _fntrace_smoke.py  _freeze_diag.py  _freeze_sample.py  _irq_tail.py  _list_cmds.py  _loop_caller.py  _missing_funcs.json  _modal_state.py  (+51 more)
